BI-003 回収進捗管理分析 追加字段及导出优化

--- a/bi-s4apps01/recoverymanagement/webapp/view/Report002.view.xml
+++ b/bi-s4apps01/recoverymanagement/webapp/view/Report002.view.xml
@@ -42,7 +42,7 @@
                 </smartfilterbar:controlConfiguration>
             </smartfilterbar:SmartFilterBar> 
 
-            <smarttable:SmartTable id="table2" header="{i18n>title2}" smartVariant="__SVM02" beforeRebindTable="onBeforeRebindTable" entitySet="ZC_BI003_REPORT_002" persistencyKey="docPersistent" enableAutoBinding="false" showRowCount="true" smartFilterId="report02Filter" tableType="Table">
+            <smarttable:SmartTable id="table2" header="{i18n>title2}" smartVariant="__SVM02" beforeRebindTable="onBeforeRebindTable" entitySet="ZC_BI003_REPORT_002" persistencyKey="docPersistent" enableAutoBinding="false" beforeExport="onBeforeExport" showRowCount="true" smartFilterId="report02Filter" tableType="Table">
 
                 <table:Table id="tableReport02" threshold="20" selectionMode="None" fixedColumnCount="3" >
                     <table:rowMode>
