--- a/mm-s4apps01/zprworkflow/webapp/view/Attach.view.xml
+++ b/mm-s4apps01/zprworkflow/webapp/view/Attach.view.xml
@@ -1,86 +1,78 @@
-<mvc:View
-    controllerName="mm.zprworkflow.controller.Attach"
-    displayBlock="true"
-    height="100%"
-    busyIndicatorDelay="0"
+<mvc:View controllerName="mm.zprworkflow.controller.Attach" displayBlock="true" height="100%" busyIndicatorDelay="0"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
-     xmlns:smartTable="sap.ui.comp.smarttable"
-     xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
-         xmlns:t="sap.ui.table"
+    xmlns:smartTable="sap.ui.comp.smarttable"
+    xmlns:smartFilterBar="sap.ui.comp.smartfilterbar"
+    xmlns:t="sap.ui.table"
     xmlns:rm="sap.ui.table.rowmodes"
-xmlns:core="sap.ui.core" 
-
-
-xmlns:r="sap.suite.ui.commons"  
-xmlns:m="sap.m"
-
+    xmlns:core="sap.ui.core"
+    xmlns:r="sap.suite.ui.commons"
+    xmlns:m="sap.m"
     xmlns:xuap="sap.uxap"
     xmlns:smartForm="sap.ui.comp.smartform"
     xmlns:smartField="sap.ui.comp.smartfield"
     xmlns:u="sap.ui.unified"
     xmlns:upload="sap.m.upload"
-    xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
->
-    <Page
-        id="idPageAttach"
-        showHeader="false"
-        floatingFooter="true"
-        showFooter="{local>/objectPageEditable}"
-    >
-        <xuap:ObjectPageLayout
-            id="idObjectPageLayoutAttach"
-            upperCaseAnchorBar="false"
-            showHeaderContent="false"
-        >
+    xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1">
+    <Page id="idPageAttach" showHeader="false" floatingFooter="true" showFooter="{local>/objectPageEditable}">
+        <xuap:ObjectPageLayout id="idObjectPageLayoutAttach" upperCaseAnchorBar="false" showHeaderContent="false">
             <xuap:sections>
- 
-
-                
-   <xuap:ObjectPageSection id="id0ObjectPageSectionAttach">
+                <xuap:ObjectPageSection id="id0ObjectPageSectionAttach">
                     <xuap:subSections>
-                        <xuap:ObjectPageSubSection
-                            id="id0ObjectPageSubSectionAttach"
-                            title="{i18n>attachment}"
-                        >
-                            <upload:UploadSet
-                                id="idUploadSetAttach"
-                                items="{Attach>DocumentInfoRecordToAttachmentNavigation}"
-                                
-                                multiple="false"
-                                mode="None"
-                                uploadEnabled="false"
-                                instantUpload="false"
-                                beforeItemAdded="onBeforeItemAdded"
-                                uploadCompleted="onUploadCompleted"
-                                fileRenamed="onFileRenamed"
-                                beforeItemRemoved="onBeforeItemRemoved"
-                            >
+                        <xuap:ObjectPageSubSection id="id0ObjectPageSubSectionAttach" title="{i18n>attachment}">
+                            <!-- MOD BEGIN BY XINLEI XU 2025/02/24 -->
+                            <!-- <upload:UploadSet id="idUploadSetAttach" items="{Attach>DocumentInfoRecordToAttachmentNavigation}" multiple="false" mode="None" uploadEnabled="false" instantUpload="false" beforeItemAdded="onBeforeItemAdded" uploadCompleted="onUploadCompleted" fileRenamed="onFileRenamed" beforeItemRemoved="onBeforeItemRemoved">
                                 <upload:items>
-                                    <upload:UploadSetItem
-                                        id="idUploadSetItemAttach"
-                                        fileName="{Attach>FileName}"
-                                        mediaType="{Attach>MimeType6}"
-                                        url="{
+                                    <upload:UploadSetItem id="idUploadSetItemAttach" fileName="{Attach>FileName}" mediaType="{Attach>MimeType6}" url="{
                                             path: 'Attach>__metadata/media_src',
                                             formatter: '.getMediaUrl'
-                                        }"
-                                        visibleEdit="false"
-                                        visibleRemove="true"
-                                    />
+                                        }" visibleEdit="false" visibleRemove="true" />
                                 </upload:items>
-                            </upload:UploadSet>
+                            </upload:UploadSet> -->
+                            <upload:UploadSetwithTable id="UploadSetTable" class="sapUiSmallMargin" multiple="false" uploadButtonInvisible="true" sticky="ColumnHeaders,HeaderToolbar" width="auto" fixedLayout="false" autoPopinMode="true" hiddenInPopin="None" items="{ path: 'local>/uploadFiles', templateShareable: false }" maxFileNameLength="60" beforeUploadStarts="onBeforeUploadStarts" uploadCompleted="onUploadCompleted" mode="MultiSelect" growing="true" growingThreshold="5" multiSelectMode="SelectAll">
+                                <upload:headerToolbar>
+                                    <OverflowToolbar>
+                                        <!-- <Title text="{i18n>documentTableTitle} ({= ${local>/uploadFiles}.length})"/> -->
+                                        <Title text="{i18n>documentTableTitle} ({= ${local>/uploadFilesLen}})"/>
+                                        <ToolbarSpacer />
+                                        <upload:ActionsPlaceholder placeholderFor="UploadButtonPlaceholder" />
+                                    </OverflowToolbar>
+                                </upload:headerToolbar>
+                                <upload:columns>
+                                    <Column id="fileName" importance="High">
+                                        <header>
+                                            <Label text="{i18n>FileName}" />
+                                        </header>
+                                    </Column>
+                                    <Column id="fileSize">
+                                        <header>
+                                            <Label text="{i18n>FileSize}" />
+                                        </header>
+                                    </Column>
+                                    <!-- <Column id="actionButton" importance="High" /> -->
+                                </upload:columns>
+                                <upload:items>
+                                    <upload:UploadSetwithTableItem fileName="{local>fileName}" mediaType="{local>fileType}" url="{local>url}" fileSize="{local>fileSize}">
+                                        <upload:cells>
+                                            <HBox>
+                                                <core:Icon src="{ parts: ['local>fileType', 'local>fileName'], formatter: '.formatter.getIconSrc' }" color="white" class="sapMUSTItemImage sapMUSTItemIcon" />
+                                                <VBox class="sapUiTinyMargin sapUiSmallMarginBegin">
+                                                    <Link text="{local>fileName}" press="onDownloadFiles" class="sapUiTinyMarginBottom" />
+                                                </VBox>
+                                            </HBox>
+                                            <Text text="{ parts: ['local>fileSize'], formatter: '.formatter.getFileSizeWithUnits' }" />
+                                            <!-- <Button class="sapUiTinyMarginBegin" type="Transparent" icon="sap-icon://decline" press="onRemoveHandler" visible="{local>/authorityCheck/button/AttachmentDelete}"/> -->
+                                        </upload:cells>
+                                    </upload:UploadSetwithTableItem>
+                                </upload:items>
+                            </upload:UploadSetwithTable>
+                            <!-- MOD END BY XINLEI XU 2025/02/24 -->
                         </xuap:ObjectPageSubSection>
                     </xuap:subSections>
                 </xuap:ObjectPageSection>
- 
-                 
             </xuap:sections>
         </xuap:ObjectPageLayout>
- 
         <footer>
-        
- 
         </footer>
     </Page>
 </mvc:View>
