--- a/mm-s4apps01/zprworkflow/webapp/view/Attach.view.xml
+++ b/mm-s4apps01/zprworkflow/webapp/view/Attach.view.xml
@@ -19,16 +19,22 @@
             <xuap:sections>
                 <xuap:ObjectPageSection id="id0ObjectPageSectionAttach">
                     <xuap:subSections>
-                        <xuap:ObjectPageSubSection id="id0ObjectPageSubSectionAttach" title="{i18n>attachment}">
+                        <xuap:ObjectPageSubSection id="id0ObjectPageSubSectionAttach" title="{i18n>attachment}(非推奨)">
                             <!-- MOD BEGIN BY XINLEI XU 2025/02/24 -->
-                            <!-- <upload:UploadSet id="idUploadSetAttach" items="{Attach>DocumentInfoRecordToAttachmentNavigation}" multiple="false" mode="None" uploadEnabled="false" instantUpload="false" beforeItemAdded="onBeforeItemAdded" uploadCompleted="onUploadCompleted" fileRenamed="onFileRenamed" beforeItemRemoved="onBeforeItemRemoved">
+                            <upload:UploadSet id="idUploadSetAttach" items="{Attach>DocumentInfoRecordToAttachmentNavigation}" multiple="false" mode="None" uploadButtonInvisible="true" uploadEnabled="true" instantUpload="false" beforeItemAdded="onBeforeItemAdded" uploadCompleted="onUploadCompleted" fileRenamed="onFileRenamed" beforeItemRemoved="onBeforeItemRemoved">
                                 <upload:items>
                                     <upload:UploadSetItem id="idUploadSetItemAttach" fileName="{Attach>FileName}" mediaType="{Attach>MimeType6}" url="{
                                             path: 'Attach>__metadata/media_src',
                                             formatter: '.getMediaUrl'
-                                        }" visibleEdit="false" visibleRemove="true" />
+                                        }" visibleEdit="false" visibleRemove="false" />
                                 </upload:items>
-                            </upload:UploadSet> -->
+                            </upload:UploadSet>
+                        </xuap:ObjectPageSubSection>
+                    </xuap:subSections>
+                </xuap:ObjectPageSection>
+                <xuap:ObjectPageSection id="id0ObjectPageSectionAttach1">
+                    <xuap:subSections>
+                        <xuap:ObjectPageSubSection id="id0ObjectPageSubSectionAttach1" title="{i18n>attachment}(新しい)">
                             <upload:UploadSetwithTable id="UploadSetTable" class="sapUiSmallMargin" multiple="false" uploadButtonInvisible="true" sticky="ColumnHeaders,HeaderToolbar" width="auto" fixedLayout="false" autoPopinMode="true" hiddenInPopin="None" items="{ path: 'local>/uploadFiles', templateShareable: false }" maxFileNameLength="60" beforeUploadStarts="onBeforeUploadStarts" uploadCompleted="onUploadCompleted" mode="MultiSelect" growing="true" growingThreshold="5" multiSelectMode="SelectAll">
                                 <upload:headerToolbar>
                                     <OverflowToolbar>
