--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
@@ -202,6 +202,11 @@
                                             <Label text="{i18n>FileSize}" />
                                         </header>
                                     </Column>
+                                    <Column id="lastModified">
+                                        <header>
+                                            <Label text="{i18n>LastModified}" />
+                                        </header>
+                                    </Column>
                                     <Column id="actionButton" importance="High" />
                                 </upload:columns>
                                 <upload:items>
@@ -214,6 +219,10 @@
                                                 </VBox>
                                             </HBox>
                                             <Text text="{ parts: ['local>fileSize'], formatter: '.formatter.getFileSizeWithUnits' }" />
+                                            <VBox>
+                                                <Text text="{local>lastModifiedBy}" />
+                                                <Text class="sapUiTinyMarginTop" text="{ parts: ['local>lastModifiedAt'], formatter: '.formatter.date'}" />
+                                            </VBox>
                                             <Button class="sapUiTinyMarginBegin" type="Transparent" icon="sap-icon://decline" press="onRemoveHandler" visible="{local>/authorityCheck/button/AttachmentDelete}"/>
                                         </upload:cells>
                                     </upload:UploadSetwithTableItem>
