工厂搜索帮助 下拉框显示为Code+描述

--- a/mm-s4apps01/zpurchasepricevariance/webapp/view/Main.view.xml
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/view/Main.view.xml
@@ -19,7 +19,7 @@
                     <FlexBox fitContainer="true">
                         <smartFilterBar:SmartFilterBar id="idSmartFilterBar" entitySet="ZC_PURCHASEPRICEVARIANCE" useToolbar="false" smartVariant="__SVM01" persistencyKey="PurchasePriceVarianceSFB">
                             <smartFilterBar:controlConfiguration>
-                                <smartFilterBar:ControlConfiguration index='10' key="Plant" visibleInAdvancedArea="true" controlType="dropDownList" label="{i18n>Plant}"/>
+                                <smartFilterBar:ControlConfiguration index='10' key="Plant" visibleInAdvancedArea="true" controlType="dropDownList" displayBehaviour="idAndDescription" label="{i18n>Plant}"/>
                                 <smartFilterBar:ControlConfiguration index='20' key="PurchaseOrder" visibleInAdvancedArea="true" label="{i18n>PurchaseOrder}"/>
                                 <smartFilterBar:ControlConfiguration index='25' key="PurchaseOrderStr" visibleInAdvancedArea="true" label="{i18n>PurchaseOrderStr}"/>
                                 <smartFilterBar:ControlConfiguration index='30' key="Supplier" visibleInAdvancedArea="true" label="{i18n>Supplier}"/>
