--- a/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
+++ b/mm-s4apps01/uploadpurchasereq/webapp/view/Change.view.xml
@@ -181,53 +181,56 @@
                 <xuap:ObjectPageSection id="id0ObjectPageSection1">
                     <xuap:subSections>
                         <xuap:ObjectPageSubSection id="id0ObjectPageSubSection1" title="{i18n>attachment}(新しい)">
-                            <upload:UploadSetwithTable id="UploadSetTable" class="sapUiSmallMargin" multiple="false" uploadEnabled="{local>/authorityCheck/button/AttachmentUpload}" sticky="ColumnHeaders,HeaderToolbar" width="auto" fixedLayout="false" autoPopinMode="true" hiddenInPopin="None" items="{ path: 'local>/uploadFiles', templateShareable: false }" maxFileNameLength="60" beforeUploadStarts="onBeforeUploadStarts" uploadCompleted="onUploadCompleted" mode="MultiSelect" growing="true" growingThreshold="5" multiSelectMode="SelectAll">
-                                <upload:headerToolbar>
-                                    <OverflowToolbar>
-                                        <!-- <Title text="{i18n>documentTableTitle} ({= ${local>/uploadFiles}.length})"/> -->
-                                        <Title text="{i18n>documentTableTitle} ({= ${local>/uploadFilesLen}})"/>
-                                        <ToolbarSpacer />
-                                        <upload:ActionsPlaceholder placeholderFor="UploadButtonPlaceholder" />
-                                        <!-- <Button id="downloadSelectedButton" text="Download" enabled="false" press="onDownloadFiles" /> -->
-                                    </OverflowToolbar>
-                                </upload:headerToolbar>
-                                <upload:columns>
-                                    <Column id="fileName" importance="High">
-                                        <header>
-                                            <Label text="{i18n>FileName}" />
-                                        </header>
-                                    </Column>
-                                    <Column id="fileSize">
-                                        <header>
-                                            <Label text="{i18n>FileSize}" />
-                                        </header>
-                                    </Column>
-                                    <Column id="lastModified">
-                                        <header>
-                                            <Label text="{i18n>LastModified}" />
-                                        </header>
-                                    </Column>
-                                    <Column id="actionButton" importance="High" />
-                                </upload:columns>
-                                <upload:items>
-                                    <upload:UploadSetwithTableItem fileName="{local>fileName}" mediaType="{local>fileType}" url="{local>url}" fileSize="{local>fileSize}">
-                                        <upload:cells>
-                                            <HBox>
-                                                <core:Icon src="{ parts: ['local>fileType', 'local>fileName'], formatter: '.formatter.getIconSrc' }" color="white" class="sapMUSTItemImage sapMUSTItemIcon" />
-                                                <VBox class="sapUiTinyMargin sapUiSmallMarginBegin">
-                                                    <Link text="{local>fileName}" press="onDownloadFiles" class="sapUiTinyMarginBottom" />
+                            <VBox>
+                                <MessageStrip text="单个文件不超过15MB." type="Information" showIcon="true"/>
+                                <upload:UploadSetwithTable id="UploadSetTable" class="sapUiSmallMargin" multiple="false" uploadEnabled="{local>/authorityCheck/button/AttachmentUpload}" sticky="ColumnHeaders,HeaderToolbar" width="auto" fixedLayout="false" autoPopinMode="true" hiddenInPopin="None" items="{ path: 'local>/uploadFiles', templateShareable: false }" maxFileNameLength="60" beforeUploadStarts="onBeforeUploadStarts" uploadCompleted="onUploadCompleted" mode="MultiSelect" growing="true" growingThreshold="5" multiSelectMode="SelectAll">
+                                    <upload:headerToolbar>
+                                        <OverflowToolbar>
+                                            <!-- <Title text="{i18n>documentTableTitle} ({= ${local>/uploadFiles}.length})"/> -->
+                                            <Title text="{i18n>documentTableTitle} ({= ${local>/uploadFilesLen}})"/>
+                                            <ToolbarSpacer />
+                                            <upload:ActionsPlaceholder placeholderFor="UploadButtonPlaceholder" />
+                                            <!-- <Button id="downloadSelectedButton" text="Download" enabled="false" press="onDownloadFiles" /> -->
+                                        </OverflowToolbar>
+                                    </upload:headerToolbar>
+                                    <upload:columns>
+                                        <Column id="fileName" importance="High">
+                                            <header>
+                                                <Label text="{i18n>FileName}" />
+                                            </header>
+                                        </Column>
+                                        <Column id="fileSize">
+                                            <header>
+                                                <Label text="{i18n>FileSize}" />
+                                            </header>
+                                        </Column>
+                                        <Column id="lastModified">
+                                            <header>
+                                                <Label text="{i18n>LastModified}" />
+                                            </header>
+                                        </Column>
+                                        <Column id="actionButton" importance="High" />
+                                    </upload:columns>
+                                    <upload:items>
+                                        <upload:UploadSetwithTableItem fileName="{local>fileName}" mediaType="{local>fileType}" url="{local>url}" fileSize="{local>fileSize}">
+                                            <upload:cells>
+                                                <HBox>
+                                                    <core:Icon src="{ parts: ['local>fileType', 'local>fileName'], formatter: '.formatter.getIconSrc' }" color="white" class="sapMUSTItemImage sapMUSTItemIcon" />
+                                                    <VBox class="sapUiTinyMargin sapUiSmallMarginBegin">
+                                                        <Link text="{local>fileName}" press="onDownloadFiles" class="sapUiTinyMarginBottom" />
+                                                    </VBox>
+                                                </HBox>
+                                                <Text text="{ parts: ['local>fileSize'], formatter: '.formatter.getFileSizeWithUnits' }" />
+                                                <VBox>
+                                                    <Text text="{local>lastModifiedBy}" />
+                                                    <Text class="sapUiTinyMarginTop" text="{ parts: ['local>lastModifiedAt'], formatter: '.formatter.date'}" />
                                                 </VBox>
-                                            </HBox>
-                                            <Text text="{ parts: ['local>fileSize'], formatter: '.formatter.getFileSizeWithUnits' }" />
-                                            <VBox>
-                                                <Text text="{local>lastModifiedBy}" />
-                                                <Text class="sapUiTinyMarginTop" text="{ parts: ['local>lastModifiedAt'], formatter: '.formatter.date'}" />
-                                            </VBox>
-                                            <Button class="sapUiTinyMarginBegin" type="Transparent" icon="sap-icon://decline" press="onRemoveHandler" visible="{local>/authorityCheck/button/AttachmentDelete}"/>
-                                        </upload:cells>
-                                    </upload:UploadSetwithTableItem>
-                                </upload:items>
-                            </upload:UploadSetwithTable>
+                                                <Button class="sapUiTinyMarginBegin" type="Transparent" icon="sap-icon://decline" press="onRemoveHandler" visible="{local>/authorityCheck/button/AttachmentDelete}"/>
+                                            </upload:cells>
+                                        </upload:UploadSetwithTableItem>
+                                    </upload:items>
+                                </upload:UploadSetwithTable>
+                            </VBox>
                             <!-- MOD END BY XINLEI XU 2025/02/20 -->
                         </xuap:ObjectPageSubSection>
                     </xuap:subSections>
